# sanmou-battle-analysis

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: base_damage_reconstruction.md  capture_workflow.md  codex_lessons.jsonl  codex_milestones.jsonl  forward_force_damage_formula_20260623.csv  forward_force_damage_formula_20260623.md  forward_force_damage_formula_visuals_20260623.md  normal_attack_damage_formula.md  physical_base_plot_samples_hp5000_no_machao_zongma_20260623.csv  physical_base_samples_20260623.csv  report_completeness_audit.md  skill_screenshot_confirmations_20260622.md  status_official_notes_20260622.md  troop_factor_analysis.md  z_k_config_vs_off_force_physical_20260622.csv  z_k_config_vs_off_force_physical_clean_hp9000_20260622.csv  z_k_config_vs_off_force_physical_clean_hp9000_no_yijing_20260622.csv
scripts/: analyze_troop_factor.py  analyze_z_attribute_candidates.py  audit_off_battle_attributes.py  audit_report_completeness.py  capture_battle.py  clear_deprecated_skill_detail_grade_20260622_once.py  db_overview.py  delete_ambiguous_duplicate_heroes_20260620_once.py  delete_bad_capture_20260622_224447_once.py  delete_caocao_dianwei_bian_group_20260622_once.py  forward_force_damage_formula.py  import_confirmed_skill_screenshots_20260622_once.py  import_official_status_notes_20260622_once.py  import_reviewed_report.py  inherit_report_config.py  plot_forward_force_damage_formula.py  plot_physical_base_vs_force_attrs.py  sync_confirmed_group_20260620_024521_once.py  sync_confirmed_group_20260620_032503_once.py  (+10 more)
src/sanmou/: db.py  (+6 more)
(+4 files in other folders)
